@@ -105,6 +105,8 @@ Trunk
 		* Creation of --enable-upnp/--disable-upnp configure flag.
 		* Update of wxWidgets-2.6.3 deprecated code to version 2.8.2.
 		* Fixed IPFilter.dat loading from a zipped file.
+		* Added a termination process to wxExecute() calls, so that we
+		  no longer leave zombies.
 
 	spiralvoice:
 		* Patch to enable MLDonkey os_info support.
